--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MeloloTube - Sonzai X</title>
-    
-    <!-- Tailwind CSS CDN -->
+    <title>MeloloTube - Nonton Drama Gratis</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
